--- a/counter/src/app/counter/counter.component.html
+++ b/counter/src/app/counter/counter.component.html
@@ -1,8 +1,14 @@
 <h1>Counter APP</h1>
 
-<h2>Contador : {{contador}} </h2>
-<hr/>
+<h2>Contador : {{ contador }}</h2>
+<hr />
 
+<app-button-add
+  [contador]="contador"
+  (onAdd)="handleAdd($event)"
+></app-button-add>
 
-<app-button-add [contador]="contador" (onAdd)="handleAdd($event)" ></app-button-add>
-<app-button-minus [contador]="contador" (onMinus)="handleRest($event)"  ></app-button-minus>
+<app-button-minus
+  [contador]="contador"
+  (onMinus)="handleRest($event)"
+></app-button-minus>
